Improve channel-handling in ThingImpl
Signed-off-by: Jan N. Klug <github@klug.nrw>